<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <parent>
        <groupId>com.luohuo.basic</groupId>
        <artifactId>luohuo-parent</artifactId>
        <version>3.0.9</version>
        <relativePath/>
    </parent>

    <groupId>com.luohuo.flex</groupId>
    <artifactId>luohuo-dependencies-parent</artifactId>
    <version>3.0.9</version>

    <packaging>pom</packaging>
    <modelVersion>4.0.0</modelVersion>

    <name>${project.artifactId}</name>
    <description>luohuo项目业务父pom</description>
    <url>https://gitee.com/HuLaSpark/HuLa-Server</url>
    <properties>
        <luohuo-util.version>3.0.9</luohuo-util.version>
        <luohuo-project.version>3.0.9</luohuo-project.version>
        <docker.image.prefix>hula</docker.image.prefix>
        <java.version>25</java.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <spring-boot.run.jvmArguments>--sun-misc-unsafe-memory-access=allow</spring-boot.run.jvmArguments>

        <spring-boot.version>4.1.0</spring-boot.version>
        <spring-boot-admin.version>4.1.1</spring-boot-admin.version>
        <spring-cloud-dependencies.version>2025.1.2</spring-cloud-dependencies.version>
        <spring-cloud-alibaba-dependencies.version>2025.1.0.0</spring-cloud-alibaba-dependencies.version>
        <nacos.version>3.2.2</nacos.version>

        <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
        <lombok.version>1.18.46</lombok.version>
        <mybatis-plus.version>3.5.16</mybatis-plus.version>
        <mybatis-plus-join.version>1.5.7</mybatis-plus-join.version>
        <mybatis-spring.version>4.1.0</mybatis-spring.version>
        <redisson.version>4.6.1</redisson.version>
        <jetbrains.annotations.version>26.1.0</jetbrains.annotations.version>
        <transmittable-thread-local.version>2.14.5</transmittable-thread-local.version>
        <javax.jws-api.version>1.1</javax.jws-api.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud-dependencies.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring-cloud-alibaba-dependencies.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>annotations</artifactId>
                <version>${jetbrains.annotations.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.yulichang</groupId>
                <artifactId>mybatis-plus-join-boot-starter</artifactId>
                <version>${mybatis-plus-join.version}</version>
            </dependency>
            <dependency>
                <groupId>com.luohuo.basic</groupId>
                <artifactId>luohuo-tenant</artifactId>
                <version>${luohuo-util.version}</version>
            </dependency>
            <dependency>
                <groupId>com.luohuo.basic</groupId>
                <artifactId>luohuo-all</artifactId>
                <version>${luohuo-util.version}</version>
            </dependency>
            <dependency>
                <groupId>com.luohuo.flex</groupId>
                <artifactId>luohuo-base-cloud-impl</artifactId>
                <version>${luohuo-project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.luohuo.flex</groupId>
                <artifactId>luohuo-sa-token-ext</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.luohuo.basic</groupId>
                <artifactId>luohuo-annotation</artifactId>
                <version>${luohuo-util.version}</version>
            </dependency>
            <dependency>
                <groupId>com.luohuo.basic</groupId>
                <artifactId>luohuo-webmvc</artifactId>
                <version>${luohuo-util.version}</version>
            </dependency>
            <dependency>
                <groupId>com.luohuo.basic</groupId>
                <artifactId>luohuo-cache-starter</artifactId>
                <version>${luohuo-util.version}</version>
            </dependency>
            <dependency>
                <groupId>com.luohuo.basic</groupId>
                <artifactId>luohuo-captcha-starter</artifactId>
                <version>${luohuo-util.version}</version>
            </dependency>
            <dependency>
                <groupId>com.luohuo.basic</groupId>
                <artifactId>luohuo-cloud-starter</artifactId>
                <version>${luohuo-util.version}</version>
            </dependency>
            <dependency>
                <groupId>com.luohuo.basic</groupId>
                <artifactId>luohuo-core</artifactId>
                <version>${luohuo-util.version}</version>
            </dependency>
            <dependency>
                <groupId>com.luohuo.basic</groupId>
                <artifactId>luohuo-databases</artifactId>
                <version>${luohuo-util.version}</version>
            </dependency>
            <dependency>
                <groupId>com.luohuo.basic</groupId>
                <artifactId>luohuo-echo-starter</artifactId>
                <version>${luohuo-util.version}</version>
            </dependency>
            <dependency>
                <groupId>com.luohuo.basic</groupId>
                <artifactId>luohuo-log-starter</artifactId>
                <version>${luohuo-util.version}</version>
            </dependency>
            <dependency>
                <groupId>com.luohuo.basic</groupId>
                <artifactId>luohuo-mq-starter</artifactId>
                <version>${luohuo-util.version}</version>
            </dependency>
            <dependency>
                <groupId>com.luohuo.basic</groupId>
                <artifactId>luohuo-mvc</artifactId>
                <version>${luohuo-util.version}</version>
            </dependency>
            <dependency>
                <groupId>com.luohuo.basic</groupId>
                <artifactId>luohuo-scan-starter</artifactId>
                <version>${luohuo-util.version}</version>
            </dependency>
            <dependency>
                <groupId>com.luohuo.basic</groupId>
                <artifactId>luohuo-swagger2-starter</artifactId>
                <version>${luohuo-util.version}</version>
            </dependency>
            <dependency>
                <groupId>com.luohuo.basic</groupId>
                <artifactId>luohuo-uid</artifactId>
                <version>${luohuo-util.version}</version>
            </dependency>
            <dependency>
                <groupId>com.luohuo.basic</groupId>
                <artifactId>luohuo-validator-starter</artifactId>
                <version>${luohuo-util.version}</version>
            </dependency>
            <dependency>
                <groupId>com.luohuo.basic</groupId>
                <artifactId>luohuo-xss-starter</artifactId>
                <version>${luohuo-util.version}</version>
            </dependency>
            <dependency>
                <groupId>com.luohuo.flex</groupId>
                <artifactId>luohuo-im-entity</artifactId>
                <version>${luohuo-util.version}</version>
            </dependency>
            <dependency>
                <groupId>com.luohuo.flex</groupId>
                <artifactId>luohuo-database-mode</artifactId>
                <version>${luohuo-util.version}</version>
            </dependency>
            <dependency>
                <groupId>com.luohuo.flex</groupId>
                <artifactId>luohuo-common</artifactId>
                <version>${luohuo-util.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>transmittable-thread-local</artifactId> <!-- 解决 ThreadLocal 父子线程的传值问题 -->
                <version>${transmittable-thread-local.version}</version>
            </dependency>
            <dependency>
                <groupId>javax.jws</groupId>
                <artifactId>javax.jws-api</artifactId>
                <version>${javax.jws-api.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!--Lombok-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-all</artifactId>
        </dependency>
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>dev</id>
            <properties>
                <profile.active>dev</profile.active>
            </properties>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
        <profile>
            <id>prod</id>
            <properties>
                <profile.active>prod</profile.active>
            </properties>
        </profile>
    </profiles>
    <build>
        <finalName>${project.artifactId}</finalName>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*</include>
                </includes>
                <filtering>true</filtering>
            </resource>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.xml</include>
                </includes>
                <filtering>true</filtering>
            </resource>
        </resources>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <release>${maven.compiler.release}</release>
                        <proc>full</proc>
                        <encoding>${project.build.sourceEncoding}</encoding>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven-jar-plugin.version}</version>
                </plugin>
                <plugin>
                    <!--打包跳过测试-->
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <skipTests>true</skipTests>
                        <skip>true</skip>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
            <plugin>
                <!--打包跳过测试-->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>

            <!-- 资源插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>

            </plugin>
            <!--
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
            </plugin>
            -->
            <!-- 一键更新子模块版本号 -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
